Fixed #7: no toolbarbutton visible (when privatebrowsing.autostart is set to true)

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "version": "1.1",
     "fullName": "VoIPGRID",
     "id": "voipgrid",
-    "description": "Firefox plugin voor klik&bel, statusupdate en wachtrij monitoring"
+    "description": "Firefox plugin voor klik&bel, statusupdate en wachtrij monitoring",
+    "permissions": {
+        "private-browsing": true
+    }
 }
