New login screen. Busy indicators while loading widgets. Misc. code improvements.  - local font files and styles  - removed jquery for panels/context menu that did not need it  - added english text as comments besides dutch text  - centralize outgoing API calls  - centralize timers  - split up panels as 'widgets'  - separate panel and clicktodial more  - some fixes in the observer that didn't find all regex matches  - jslint: every script is (function() { 'use strict'; })();  - stop polling after additional statuses: 'blacklisted', 'failed_a', 'failed_b'  - trailing whitespace  - added a print style to hide the voipgrid-phone-icons when printing  - don't display an empty status (null) and show an initial status, so status is never empty

--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
+    "id": "voipgrid",
+    "name": "voipgrid",
+    "main": "main",
+    "version": "1.1",
+    "author": "VoIPGRID",
+    "license": "MPL 1.1/GPL 2.0/LGPL 2.1",
+    "fullName": "VoIPGRID",
+
+    "_description-in-english": "Firefox add-on for click-to-dial, status updates and queue monitoring",
+    "description": "Firefox plugin voor klik&bel, statusupdate en wachtrij monitoring",
+
     "preferences": [
         {
             "name": "platform_url",
-            "title": "Platform URL",
             "type": "string",
-            "description": "default: https://partner.voipgrid.nl/",
-            "value": "https://partner.voipgrid.nl/"
+            "description": "Standaard: https://partner.voipgrid.nl/",
+            "value": "https://partner.voipgrid.nl/",
+
+            "_title-in-english": "Platform URL",
+            "title": "Platform URL"
+        },
+        {
+            "name": "click_to_dial_enabled",
+            "type": "bool",
+            "description": "Standaard: aan",
+            "value": true,
+
+            "_title-in-english": "Show click-to-dial icons on websites",
+            "title": "Toon klik & bel iconen op websites"
         }
     ],
-    "name": "voipgrid",
-    "license": "MPL 1.1/GPL 2.0/LGPL 2.1",
-    "author": "VoIPGRID",
-    "version": "1.1",
-    "fullName": "VoIPGRID",
-    "id": "voipgrid",
-    "description": "Firefox plugin voor klik&bel, statusupdate en wachtrij monitoring",
     "permissions": {
         "private-browsing": true
     }
