Update harness-options. Replace Erik Void's toolbarbutton with Rob Wu's toolbarwidget (which bumps the minimal Firefox version to 31). Removed listen.js/unload+.js.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
             "description": "click_to_dial_enabled_description"
         }
     ],
+    "dependencies": ["toolbarwidget"],
     "permissions": {
         "private-browsing": true
     }
