GRID-3609: Strip lowerlevel API, make e10s compatible and prepare for jpm packaging

--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-    "id": "voipgrid",
+    "id": "voipgrid@jetpack",
     "name": "voipgrid",
-    "main": "main",
+    "main": "./lib/main.js",
     "version": "1.6.2",
     "author": "VoIPGRID",
     "license": "MPL 1.1/GPL 2.0/LGPL 2.1",
     "fullName": "VoIPGRID",
 
-    "description": "https://bugzilla.mozilla.org/show_bug.cgi?id=661083. Replace this description with the localized description in install.rdf manually! Run cfx xpi, unzip voipgrid.xpi, edit install.rdf and re-zip or just run ./localize_xpi.sh.",
+    "description": "Firefox add-on for click-to-dial, status updates and queue monitoring.",
+
+    "locales": {
+        "en-US": {
+            "title": "VoIPGRID",
+            "description": "Firefox add-on for click-to-dial, status updates and queue monitoring."
+        },
+        "nl-NL": {
+            "title": "VoIPGRID",
+            "description": "Firefox plugin voor klik&amp;bel, statusupdate en wachtrij monitoring."
+        }
+    },
 
     "preferences": [
         {
@@ -25,8 +36,8 @@
             "description": "click_to_dial_enabled_description"
         }
     ],
-    "dependencies": ["toolbarwidget"],
     "permissions": {
-        "private-browsing": true
+        "private-browsing": true,
+        "multiprocess": true
     }
 }
