Since jpm using an &amp; is no longer necessary.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         },
         "nl-NL": {
             "title": "VoIPGRID",
-            "description": "Firefox plugin voor klik&amp;bel, statusupdate en wachtrij monitoring."
+            "description": "Firefox plugin voor klik&bel, statusupdate en wachtrij monitoring."
         }
     },
 
